# binoxxo-webapp-seed

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.ps1  build.sh  index.html  serve.py  trunk.toml
assets/: favicon.xcf  index.html  main.scss
src/: control.rs  lang.rs  language.rs  lib.rs  main.rs  model.rs  view.rs
src/lang/: de-DE  en-US
