[package]
name = "binoxxo-webapp-seed"
version = "0.5.0"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Binoxxo puzzle game as a webapp using wasm and seed"
repository = "https://github.com/msuesskraut/binoxxo-webapp-seed"
homepage = "https://msuesskraut.github.io/binoxxo/"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
wasm-bindgen = "0.2.70"
binoxxo = "0.5.0"
fluent-bundle = "0.14.3"
unic-langid = { version = "0.9.0", features = ["macros"] }
elsa = "1.3.2"
lazy_static = "1.4.0"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"

[dependencies.web-sys]
version = "^0.3.47"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.20"
