[package]
name = "binoxxo-webapp-seed"
version = "0.5.1"
authors = ["Martin Suesskraut <martin.suesskraut@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "Binoxxo puzzle game as a webapp using wasm and seed"
repository = "https://github.com/msuesskraut/binoxxo-webapp-seed"
homepage = "https://msuesskraut.github.io/binoxxo/"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.8.0"
wasm-bindgen = "0.2.74"
binoxxo = "0.5.0"
fluent-bundle = "0.15.1"
unic-langid = { version = "0.9.0", features = ["macros"] }
elsa = "1.4.0"
lazy_static = "1.4.0"

# For serialization, eg sending requests to a server. Otherwise, not required.
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"

[dependencies.web-sys]
version = "^0.3.51"
features = [
    "Blob",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.24"
